hphp/hack/test/reserved/enum.php.hh.exp
File "enum.php--Arraykey.php", line 2, characters 6-13:
Cannot use `Arraykey` as a type name as it is reserved (Parsing[1002])
File "enum.php--Bool.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--Callable.php", line 2, characters 6-13:
Cannot use `Callable` as a type name as it is reserved (Parsing[1002])
File "enum.php--Darray.php", line 2, characters 6-11:
Cannot use `Darray` as a type name as it is reserved (Parsing[1002])
File "enum.php--Dynamic.php", line 2, characters 6-12:
Cannot use `Dynamic` as a type name as it is reserved (Parsing[1002])
File "enum.php--False.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--Float.php", line 2, characters 6-10:
Cannot use `Float` as a type name as it is reserved (Parsing[1002])
File "enum.php--Int.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--Mixed.php", line 2, characters 6-10:
Cannot use `Mixed` as a type name as it is reserved (Parsing[1002])
File "enum.php--Nonnull.php", line 2, characters 6-12:
Cannot use `Nonnull` as a type name as it is reserved (Parsing[1002])
File "enum.php--Noreturn.php", line 2, characters 6-13:
Cannot use `Noreturn` as a type name as it is reserved (Parsing[1002])
File "enum.php--Nothing.php", line 2, characters 6-12:
Cannot use `Nothing` as a type name as it is reserved (Parsing[1002])
File "enum.php--Null.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--Num.php", line 2, characters 6-8:
Cannot use `Num` as a type name as it is reserved (Parsing[1002])
File "enum.php--Parent.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--Resource.php", line 2, characters 6-13:
Cannot use `Resource` as a type name as it is reserved (Parsing[1002])
File "enum.php--Self.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--Static.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--String.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--This.php", line 2, characters 6-9:
Cannot use `This` as a type name as it is reserved (Parsing[1002])
File "enum.php--True.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--Varray.php", line 2, characters 6-11:
Cannot use `Varray` as a type name as it is reserved (Parsing[1002])
File "enum.php--Void.php", line 2, characters 6-6:
A name is expected here. (Parsing[1002])
File "enum.php--_.php", line 2, characters 6-6:
Cannot use `_` as a type name as it is reserved (Parsing[1002])
