hphp/hack/test/reserved/enum.php
//// Foo.php
<?hh
enum Foo : int {}

//// Arraykey.php
<?hh
enum Arraykey : int {}

//// Bool.php
<?hh
enum Bool : int {}

//// Callable.php
<?hh
enum Callable : int {}

//// Classname.php
<?hh
enum Classname : int {}

//// Darray.php
<?hh
enum Darray : int {}

//// Dynamic.php
<?hh
enum Dynamic : int {}

//// False.php
<?hh
enum False : int {}

//// Float.php
<?hh
enum Float : int {}

//// Int.php
<?hh
enum Int : int {}

//// Mixed.php
<?hh
enum Mixed : int {}

//// Nonnull.php
<?hh
enum Nonnull : int {}

//// Noreturn.php
<?hh
enum Noreturn : int {}

//// Nothing.php
<?hh
enum Nothing : int {}

//// Null.php
<?hh
enum Null : int {}

//// Num.php
<?hh
enum Num : int {}

//// Parent.php
<?hh
enum Parent : int {}

//// Resource.php
<?hh
enum Resource : int {}

//// Self.php
<?hh
enum Self : int {}

//// Static.php
<?hh
enum Static : int {}

//// String.php
<?hh
enum String : int {}

//// This.php
<?hh
enum This : int {}

//// True.php
<?hh
enum True : int {}

//// Varray.php
<?hh
enum Varray : int {}

//// Void.php
<?hh
enum Void : int {}

//// _.php
<?hh
enum _ : int {}
